# RedSoft-client-server-task

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp
client/include/: InputValidation.h  commands.h  connection.h  validation.h
client/src/: InputValidation.cpp  commands.cpp  connection.cpp  main.cpp  validation.cpp
common/: CMakeLists.txt
common/include/: network_utils.h  validation.h
common/src/: network_utils.cpp  validation.cpp  validations.cpp
server/: CMakeLists.txt  server.cpp
server/include/: commands.h  connections.h
server/src/: commands.cpp  connections.cpp  validation.cpp
